# api.agentauri.ai

./: .env.example  .env.test.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  EVENT_STORE_COMPLETION.md  HTTPS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PONDER_TELEMETRY_QUICKSTART.md  PRODUCTION_ROADMAP.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_FIXES.md  TEST_RESULTS.md  TODO-COST-OPTIMIZATION.md  docker-compose.vault.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
rust-backend/: .dockerignore  Cargo.toml  Dockerfile  RATE_LIMITER_IMPLEMENTATION.md  README.md
rust-backend/.cargo/: config.toml
rust-backend/.sqlx/: query-029637feca2c6318e396a688d2e02628fe7ed95e0ee3a75075957a173f101998.json  query-0fd9a2bfe4248c034a9901e6e905bbd3d744675884b5ab955a2460d6df84c42d.json  query-12f658bf46b220f87f3126f5f2f022a5db9bd58bfe1de2d76c074aeeadef8b2a.json  query-1303ffc80acc290c77e47c0071f51df11e4126e0bbe036a935f072c66c5190b9.json  query-183a45ac3da661bc3c576e618c5d89c98ebde4efc811a2fefc132d3b8d964749.json  query-1d603e450013f7cefbfe245a254c7ff52ff395a5caada6d4e51bc4425d1a3cad.json  query-255979c507b14c9e2c9e5ca5389fda9d56c128dbc71dff422c32211c83375c31.json  query-2691f35411a1ecabd728e958a7a61a8edcf71be96ed5103c5deeff6f29595c0c.json  query-27878cddf5972dd621d3c51b06935673df985b7a6b7ae056174c5d7cfab8ab4f.json  query-286297ba8dc7d719685d2d7e1ab92db2181b35c30aa4f7082959142b5fa740e2.json  query-28df40784956ffce1523c18af8cabaa72e37b7fc9d80fb787cd997ab82370fbe.json  query-2a2cbb097d766c204c8f4483c9f4ffc7bb58e237224478f5be41cfcc70c914db.json  query-3223f2bc4c9da325acbf96c938cc3c5ecb8303f31834cffcd37ed98bf9fcf874.json  query-3574b49c4f65f83136bccc239e3b639e829f223eb2e26a24c0832622f12a308a.json  query-36345cc01795df338ed4e7a37148c7f0a6ec98286d6cc259cae12f5eb2ca2c57.json  query-377b902e4864a4921fcf61a8d4a99aa78522ed5fcf94da598779577aced1784a.json  query-3af9220e3a6646d3212d7af24f6327499aaaf30fbc890808bd026c567ae28f45.json  query-3b49dd301bd383e333bc8435cf9083198f2fd8a23263478d517ab09d485a443f.json  query-3e2afc9f61f958a36f66fc8b68423f30e84ab78b069377e70746465fb62bdb7e.json  query-44e2dcc14d1aedd0c863248ec16d4655984326b3d234228a321768a66dabc95d.json  query-46d9d2b21278b944154ab158e39cc80a863d5b14c12be1835a98b8f2d2a9f8a5.json  query-4aede25afd179128e3f611bfe4a0e5ede41d09c4975767622c0c602f47a774e3.json  query-52dca7cde7d07ae4f3addff63aed1724291f9cb7e779f9f4eb6dbd8367e227d6.json  query-667064354b1fc273efc6292573e934878a038777a2f12fc1503543ee7170de09.json  query-6a58effbba3066ed49454e4803eb359b73778a25c3a61b7305ac7d376a640188.json  query-6cabcf1cd9aa9792bc10dedcf460c9220e78c2b7a7a86330d69e44326db1edac.json  query-73ac41ac40028050474bef40a3ff5ae49e5a7f9b16b7b2cc1f0946aa3affd34d.json  query-7443b6776efa8d468c32c19b870351d3341879ad7047fb35fa5763a2500e59be.json  query-7ac72afcb210f6ae8b1e4a26a2ff7c7903888d12134230df72dd46b4ba59f4fa.json  query-84cf12340fb460abe92fca82e90ae0bf61b327327662117b27dc83a6d3ab6c2d.json  query-862aca56e9d83b57734a31cef44bd7aee35625560ae46d9b9f3535d07d3a20ce.json  query-8875bd3cfb093ed17ad0473f44954161e45e6feeebffd7a4b4ce3220a1cf5f41.json  query-90176de0622e01396d4ac272316f006346202fd7629953079aa915fe70fb829b.json  query-981869765ec3987fd6e8c03341433d791c76bf14b577536db8a1370f77acb590.json  query-a2e025dd18c30b964808edc3a18a308163f4c3052a7a634b5186c9b901a7ad3d.json  query-a37e046eb3d8cb3b4fa8e56219be9cb8c582c8fc8ca333e4b03b87f717fd882b.json  query-a94a3c19e96620a28b587acafc408b39dfdf8c28306783bce8034662e6ec45d8.json  query-ae8bf15e72ac31979d2ca239f641cb41d1217dc4d2e4e86caaaf2b53f092b5e1.json  query-b73690ddcd3ac2fa92e19ee12ef0dbfa588e4bdb138d6d763046549ab8db1d81.json  query-bf63f7595a51ba9e947c73e841afe4a09409fdf2fd1f364b9c65a45fd767b073.json  (+16 more)
rust-backend/crates/action-workers/: Cargo.toml
rust-backend/crates/action-workers/src/: consumer.rs  dlq.rs  error.rs  main.rs  mcp.rs  metrics.rs  rate_limiter.rs  rest.rs  result_logger.rs  retry.rs  telegram.rs  template.rs
rust-backend/crates/action-workers/src/workers/: mcp_worker.rs  mod.rs  rest_worker.rs  telegram_worker.rs
rust-backend/crates/api-gateway/: API_DOCUMENTATION.md  Cargo.toml  RATE_LIMITER_USAGE.md  SECURITY_HEADERS_IMPLEMENTATION.md
rust-backend/crates/api-gateway/src/: background_tasks.rs  lib.rs  main.rs  middleware.rs  openapi.rs  routes.rs  validators.rs
rust-backend/crates/api-gateway/src/handlers/: a2a.rs  actions.rs  agent_follows.rs  agents.rs  api_keys.rs  auth.rs  billing.rs  circuit_breaker.rs  conditions.rs  discovery.rs  events.rs  health.rs  helpers.rs  mod.rs  oauth.rs  organizations.rs  ponder.rs  social_auth.rs  triggers.rs
rust-backend/crates/api-gateway/src/middleware/: auth_extractor.rs  cors.rs  ip_extractor.rs  metrics.rs  query_tier.rs  request_id.rs  security_headers.rs  unified_rate_limiter.rs
rust-backend/crates/api-gateway/src/models/: a2a.rs  actions.rs  agent_follows.rs  api_keys.rs  auth.rs  billing.rs  common.rs  (+8 more)
rust-backend/crates/api-gateway/tests/: api_keys_test.rs  discovery_test.rs  rate_limiting_integration.rs  security_headers_integration_test.rs
rust-backend/crates/event-processor/: CACHING.md  CIRCUIT_BREAKER_INTEGRATION.md  Cargo.toml  PERFORMANCE.md  README_CACHING.md  TESTING.md
rust-backend/crates/event-processor/benches/: state_cache_benchmark.rs
rust-backend/crates/event-processor/src/: cached_state_manager.rs  circuit_breaker.rs  jobs.rs  lib.rs  listener.rs  main.rs  polling_fallback.rs  processor.rs  queue.rs  state_manager.rs  trigger_engine.rs
rust-backend/crates/event-processor/tests/: batch_loading_test.rs  cached_state_manager_integration.rs  circuit_breaker_test.rs  error_handling_integration_test.rs  state_manager_integration_test.rs
rust-backend/crates/mcp-server/: Cargo.toml
rust-backend/crates/mcp-server/src/: client.rs  main.rs  protocol.rs  tools.rs
rust-backend/crates/shared/: Cargo.toml
rust-backend/crates/shared/src/: config.rs  db.rs  error.rs  jobs.rs  lib.rs  models.rs
(+369 files in other folders)
