[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/api-gateway",
    "crates/event-processor",
    "crates/action-workers",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["api.8004.dev Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"

# Web framework
actix-web = "4.10"
actix-cors = "0.7"
actix-rt = "2.10"

# Database
# NOTE: MySQL and SQLite features explicitly disabled to avoid RUSTSEC-2023-0071 (RSA crate vulnerability)
# This project only uses PostgreSQL, so MySQL/SQLite support is not needed
# IMPORTANT: default-features = false prevents pulling in mysql/sqlite dependencies
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
    "json",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Configuration and environment
dotenvy = "0.15"
config = "0.15"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# Testing
mockall = "0.13"

# Rate limiting
governor = "0.6"
dashmap = "6.1"

# Metrics
# NOTE: prometheus 0.13 has protobuf CVE vulnerability
# Using metrics + metrics-exporter-prometheus as recommended alternative
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
lazy_static = "1.4"

# Template parsing
regex = "1"

# Cryptographic utilities
base64 = "0.22"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"

# Ethereum / EIP-191 signature verification
alloy = { version = "0.5", features = ["signers", "contract", "provider-http"] }

# Stripe payment processing
async-stripe = { version = "0.39", features = ["runtime-tokio-hyper"] }

# Hex encoding/decoding
hex = "0.4"

# OAuth 2.0 client for social login (Google, GitHub)
oauth2 = "4.4"

# URL encoding for redirects
urlencoding = "2.1"

# System utilities
hostname = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 0
debug = true
