[package]
name = "action-workers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "action-workers"
path = "src/main.rs"

[dependencies]
# Shared library
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Redis
redis = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Telegram
teloxide = { workspace = true }

# Date and time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Rate limiting
governor = { workspace = true }

# Metrics
# NOTE: Migrated from prometheus to metrics crate due to protobuf CVE in prometheus 0.13
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Used for template pattern compilation (lazy_static for regex)
lazy_static = { workspace = true }

# Template parsing
regex = { workspace = true }

# Security - secret handling
secrecy = "0.8"

[dev-dependencies]
mockall = { workspace = true }
