[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
# Shared library
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }
futures-util = { workspace = true }

# Web framework
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-rt = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Validation
validator = { workspace = true }

# Date and time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Regex for slug validation
regex = { workspace = true }

# Cryptographic utilities for API key generation
base64 = { workspace = true }
rand = { workspace = true }

# Rate limiting for authentication
governor = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
actix-rt = { workspace = true }
once_cell = "1.19"
serde_urlencoded = "0.7"
