[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
# Shared library
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }
futures-util = { workspace = true }

# Web framework
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-rt = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Validation
validator = { workspace = true }

# Date and time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Regex for slug validation
regex = { workspace = true }

# Cryptographic utilities for API key generation
base64 = { workspace = true }
rand = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

# Rate limiting for authentication
governor = { workspace = true }

# Ethereum / EIP-191 signature verification
alloy = { workspace = true }

# Stripe payment processing
async-stripe = { workspace = true }

# OAuth 2.0 client for social login
oauth2 = { workspace = true }

# URL encoding for redirects
urlencoding = { workspace = true }

# Hex encoding/decoding
hex = { workspace = true }

# HTTP client for on-chain verification
reqwest = { workspace = true }

# Lazy static initialization
once_cell = "1.19"

# Cancellation tokens for background tasks
tokio-util = { workspace = true }

# Redis for caching
redis = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
actix-rt = { workspace = true }
serde_urlencoded = "0.7"
redis = { workspace = true }
