[package]
name = "event-processor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "event_processor"
path = "src/lib.rs"

[[bin]]
name = "event-processor"
path = "src/main.rs"

[dependencies]
# Shared library
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Redis
redis = { workspace = true }

# Date and time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Metrics (optional feature)
metrics = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }

[[bench]]
name = "state_cache_benchmark"
harness = false

[features]
default = []
metrics = ["dep:metrics"]
