[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server for Claude Desktop integration"

[[bin]]
name = "agentauri-mcp"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
dotenvy.workspace = true

# MCP protocol - JSON-RPC over stdio
async-trait.workspace = true
futures-util.workspace = true
