[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Date and time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Validation
validator = { workspace = true }

# Redis
redis = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Concurrent data structures for fallback rate limiting
dashmap = { workspace = true }

# Cryptographic utilities (for secret generation)
base64 = { workspace = true }
rand = { workspace = true }

# Optional: AWS Secrets Manager (enable with --features aws-secrets)
aws-config = { version = "1.0", optional = true }
aws-sdk-secretsmanager = { version = "1.0", optional = true }

# Optional: HashiCorp Vault (enable with --features vault-secrets)
vaultrs = { version = "0.7", optional = true }

[features]
# Secrets management backends
aws-secrets = ["aws-config", "aws-sdk-secretsmanager"]
vault-secrets = ["vaultrs"]
# Enable aws-secrets by default for production deployments
# In development, use SECRETS_BACKEND=env to skip AWS calls
default = ["aws-secrets"]
